welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: '=' expected but ';' found.
var i;i<0 to 4 
     ^