welcome.lessons.welcome.variables.RunFour.scala.code
var i;i<0 to 4 
while(!i=4){
 	avance();
}